# ioto

./: .env  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  EVAL.md  LICENSE.md  Makefile  README-CLOUD.md  README-ESP32.md  README-FREERTOS.md  README.md  llms.txt  main.me  pak.json
.claude/: settings.local.json
AI/: README.md
apps/: apps.me
certs/: ca.crt  ca.key  ec.crt  ec.key  self.crt  self.key  test.crt  test.key
cmds/: db.c  json.c  main.c  web.c  webserver.c
doc/: DESIGN.md  doc.me  ioto.dox  web.json5
include/: config.h  crypt.h  db.h  ioto-config.h  ioto.h  json.h  me.h  mqtt.h  openai.h  osdep.h  r.h  uctx-os.h  uctx.h  url.h  web.h  websock.h  websockets.h
installs/: installs.me  manifest.me
lib/: cryptLib.c  dbLib.c  iotoLib.c  jsonLib.c  mqttLib.c  openaiLib.c  rLib.c  uctxAssembly.S  uctxLib.c  urlLib.c  webLib.c  websockLib.c  websocketsLib.c
projects/: .db.guid  .ioto.guid  .json.guid  .libioto.guid  .password.guid  .prep.guid  .webserver.guid  ioto-freebsd-default-me.h  ioto-freebsd-default.mk  ioto-freertos-default-me.h  ioto-freertos-default.mk  ioto-linux-default-me.h  ioto-linux-default.mk  ioto-macosx-default-me.h  ioto-macosx-default.mk  ioto-vxworks-default-me.h  ioto-vxworks-default.mk  ioto-windows-default-me.h  ioto-windows-default.nmake  ioto-windows-default.sln
projects/esp32/: CMakeLists.txt  Makefile
samples/: README.md
schemas/: CloudSchema.json5  DeviceSchema.js  LocalSchema.json5  PinSchema.json5
src/: agent.c  app.c  mqtt.c  register.c  serialize.c  setup.c  webserver.c
test/: cleanup.sh  prep.sh  (+1 more)
(+425 files in other folders)
